--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -1,36 +1,28 @@
 <div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">assets</h3>
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <h1>Grassroot</h1>
+  <h2> <small> The final solution for NPOs looking to expand their audience </small> </h2>
+  <p><a class="btn btn-lg btn-success" ng-href="#">Jump In!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div class="row">
+  <div class="list-group">
+    <a ng-href="#location" class="list-group-item active">
+      Geolocation
+    </a>
+    <a href="#" class="list-group-item">Find a representative</a>
+    <a href="#" class="list-group-item">Find your inner philanthropist</a>
+    <a href="#" class="list-group-item">Causes that need you</a>
+    <a href="#" class="list-group-item">Direct line to Clinton</a>
+  </div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div>
+<p> Test API output: </p>
+{{output}}
 </div>
 
 <div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+  <p><span class="glyphicon glyphicon-registration-mark"></span> 2014 Grassroot Mobile Inc (we really out here)</p>
 </div>
