Added view for events.

--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -9,10 +9,8 @@
 
 <div class="row">
   <div class="list-group">
-    <a ng-href="#location" class="list-group-item active">
-      Geolocation
-    </a>
-    <a href="#" class="list-group-item">Find a representative</a>
+    <a ng-href="#location" class="list-group-item"> Geolocation </a>
+    <a href="#events" class="list-group-item">Upcoming Events</a>
     <a href="#" class="list-group-item">Find your inner philanthropist</a>
     <a href="#" class="list-group-item">Causes that need you</a>
     <a href="#" class="list-group-item">Direct line to Clinton</a>
