Added api calls and ui for events. Scaffolding for calendar plugin.

--- a/assets/app/views/event.html
+++ b/assets/app/views/event.html
@@ -1,3 +1,7 @@
 <h2> {{event.name}} </h2>
 <hr/>
 <p> {{event.description}} </p>
+<hr/>
+<p> Time: {{event.event_date}} </p>
+
+<button class='btn btn-primary' ng-click='addToCalendar()'> <span class='glyphicon glyphicon-plus'></span> Add To Calendar </button>
