--- a/assets/app/views/events.html
+++ b/assets/app/views/events.html
@@ -1,5 +1,12 @@
-<div class="list-group">
+<div class="list-group events">
   <a ng-repeat='event in allEvents' ng-href="#events/{{event.id}}" class="list-group-item">
-    {{event.name}}
+  	<div class='row'>
+	    <div class='col-md-4 circle'>
+	     <p class='event-date'> {{event.event_date}} </p>
+	    </div>
+	    <div class='col-md-8'>
+	    	<p class='event-name'> {{event.name}} </p>
+	    </div>
+    </div>
   </a>
 </div>
