--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -11,12 +11,10 @@
   <div class="list-group">
     <a ng-href="#location" class="list-group-item"> Geolocation </a>
     <a href="#events" class="list-group-item">Upcoming Events</a>
-    <a href="#" class="list-group-item">Find your inner philanthropist</a>
-    <a href="#" class="list-group-item">Causes that need you</a>
-    <a href="#" class="list-group-item">Direct line to Clinton</a>
+    <a href="#take_action" class="list-group-item">Take Action</a>
   </div>
 
-<div>
+</div>
 <p> Test API output: </p>
 {{output}}
 </div>
