--- a/assets/app/views/newsletter.html
+++ b/assets/app/views/newsletter.html
@@ -5,10 +5,10 @@
   <div class="modal-body create">
 
     <div class='form-group'>
-      <label class='col-3 control-label' for='name'> Name</label>
+      <label class='col-3 control-label' for='name'>Full Name</label>
       <div class='col-7'>
-        <input id='name' class='form-control' type='text' name='name' ng-model='formData.name' ng-pattern="/[a-zA-z]+\s[a-zA-z]+/" ng-minlength="3" ng-maxlength="60" required/>
-        <p class='error-helper text-danger' ng-show='form.signup.name.$invalid && showErrors'>please enter your  name</p>
+        <input id='name' class='form-control' type='text' name='name' ng-model='formData.name' ng-pattern="/[a-zA-z]+\s[a-zA-z]+/" ng-minlength="5" ng-maxlength="60" required/>
+        <p class='error-helper text-danger' ng-show='form.signup.name.$invalid && showErrors'>please enter your full name</p>
       </div>
     </div>
 
