--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -1,14 +1,10 @@
-<div class="header">
-</div>
-
 <div class="jumbotron">
   <h1>Grassroot</h1>
   <h2> <small> The final solution for NPOs looking to expand their audience </small> </h2>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Jump In!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row">
-  <div class="list-group">
+  <div class="list-group menu">
     <a ng-href="#location" class="list-group-item"> Geolocation </a>
     <a href="#events" class="list-group-item">Upcoming Events</a>
     <a href="#take_action" class="list-group-item">Take Action</a>
@@ -16,5 +12,5 @@
 </div>
 
 <div class="footer">
-  <p><span class="glyphicon glyphicon-registration-mark"></span> 2014 Grassroot Mobile Inc (we really out here)</p>
+  <p><span class="glyphicon glyphicon-registration-mark"></span> 2014 Grassroot Mobile Inc </p>
 </div>
