--- a/assets/app/views/petition.html
+++ b/assets/app/views/petition.html
@@ -2,4 +2,4 @@
 <hr/>
 <p> {{petition.contents}} </p>
 
-<a href='#sign_petition'><button class='btn btn-primary'> Sign </button></a>
+<a ng-href='#sign_petition/{{petition_id}}'><button class='btn btn-primary'> Sign </button></a>
