--- a/assets/app/views/petitions.html
+++ b/assets/app/views/petitions.html
@@ -1,4 +1,8 @@
-<div class="list-group">
+<div class='jumbotron'>
+	<h1>Petitions</h1>
+</div>
+
+<div class="list-group menu">
   <a ng-repeat='petition in allPetitions' ng-href="#petitions/{{petition.id}}" class="list-group-item">
 	  {{petition.name}}
   </a>
