--- a/assets/app/views/take_action.html
+++ b/assets/app/views/take_action.html
@@ -1,5 +1,9 @@
+<div class='jumbotron'>
+	<h1>Take Action</h1>
+</div>
+
 <div class="row">
-  <div class="list-group">
+  <div class="list-group menu">
     <a href="#petitions" class="list-group-item"> Sign Petition </a>
     <a href="#newsletter" class="list-group-item">Sign Up For Newsletter</a>
     <a href="#" class="list-group-item">Send Letter (coming soon)</a>
