--- a/assets/app/styles/events.css
+++ b/assets/app/styles/events.css
@@ -1,18 +1,37 @@
+.events {
+	margin-bottom: 25%;
+	height: 50%;
+}
+
 .circle {
 	border-radius: 50%;
 	width: 70px;
 	height: 70px;
 
 	margin-left: 5px;
-	background-color: blue;
-	color: #fff;
+	/*background-color: #B0A590;*/
+	background: rgba(148, 235, 136, .6);
+	color: #191A19;
+	font-weight: 600;
+}
+
+.events .list-group-item {
+	background: rgba(148, 235, 136, .6);
+  color: #fff;
+}
+
+.events .list-group-item:hover {
+	background: rgba(148, 235, 136, .6);
 }
 
 .event-date {
 	margin-top: 15px;
 	margin-left: 3px;
+	font-size: 12px;
 }
 
 .event-name {
-	margin-top: 18px;
+	margin-top: 20px;
+	font-weight: 500;
+	color: #fff;
 }
