--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="list-group menu">
-    <a ng-href="#location" class="list-group-item"> Geolocation </a>
+    <a href="#stories" class="list-group-item"> Stories </a>
     <a href="#events" class="list-group-item">Upcoming Events</a>
     <a href="#take_action" class="list-group-item">Take Action</a>
   </div>
