Changed date display in event. Updated landing page message.

--- a/assets/app/views/event.html
+++ b/assets/app/views/event.html
@@ -2,6 +2,6 @@
 <hr/>
 <p> {{event.description}} </p>
 <hr/>
-<p> Time: {{event.event_date}} </p>
+<p> Time: {{date.month}}/{{date.day}}/{{date.year}} </p>
 
 <button class='btn btn-primary' ng-click='addToCalendar()'> <span class='glyphicon glyphicon-plus'></span> Add To Calendar </button>
