--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>Grassroot</h1>
-  <h2> <small> The final solution for NPOs looking to expand their audience </small> </h2>
+  <h2> <small> Mobilize your reach. </small> </h2>
 </div>
 
 <div class="row">
