--- a/assets/app/views/main.html
+++ b/assets/app/views/main.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="list-group menu">
-    <a href="#stories" class="list-group-item"> Stories </a>
+    <a href="#stories" class="list-group-item"> News Updates </a>
     <a href="#events" class="list-group-item">Upcoming Events</a>
     <a href="#take_action" class="list-group-item">Take Action</a>
     <a href="#message_center" class="list-group-item"> Message Center </a>
