--- a/assets/app/views/take_action.html
+++ b/assets/app/views/take_action.html
@@ -10,3 +10,11 @@
   </div>
 
 </div>
+
+<div class='footer'>
+	<div class="btn-group">
+	  <a href='#home'> <button type="button" class="btn btn-default">Home</button> </a>
+	  <a href='#stories'> <button type="button" class="btn btn-default">Stories</button> </a>
+	  <a href='#message_center'> <button type="button" class="btn btn-default">Message Center</button> </a>
+	</div>
+</div>
