--- a/assets/app/styles/events.css
+++ b/assets/app/styles/events.css
@@ -3,18 +3,6 @@
 	height: 50%;
 }
 
-.circle {
-	border-radius: 50%;
-	width: 70px;
-	height: 70px;
-
-	margin-left: 5px;
-	/*background-color: #B0A590;*/
-	background: rgba(148, 235, 136, .6);
-	color: #191A19;
-	font-weight: 600;
-}
-
 .events .list-group-item {
 	background: rgba(54, 150, 62, .6);
   color: #fff;
@@ -25,13 +13,21 @@
 }
 
 .event-date {
-	margin-top: 15px;
-	margin-left: 3px;
-	font-size: 12px;
+	margin: 0 auto 0 auto;
+	width: 70%;
+}
+
+.day {
+	margin: 0 auto 0 auto;
+	width: 70%;
 }
 
 .event-name {
-	margin-top: 20px;
+	margin-top: 15px;
 	font-weight: 500;
 	color: #fff;
+}
+
+hr {
+	margin: 5px auto 5px auto;
 }
