--- a/assets/app/views/events.html
+++ b/assets/app/views/events.html
@@ -5,10 +5,12 @@
 <div class="list-group events">
   <a ng-repeat='event in allEvents' ng-href="#events/{{event.id}}" class="list-group-item">
   	<div class='row'>
-	    <div class='col-xs-4 circle'>
-	     <p class='event-date'> {{event.event_date}} </p>
+	    <div class='col-xs-3'>
+	      <p class='day'> {{event.day}}</p>
+	      <hr/>
+	      <p class='event-date'> {{event.event_date}} </p>
 	    </div>
-	    <div class='col-xs-8'>
+	    <div class='col-xs-9'>
 	    	<p class='event-name'> {{event.name}} </p>
 	    </div>
     </div>
