--- a/assets/app/views/message_center.html
+++ b/assets/app/views/message_center.html
@@ -12,7 +12,7 @@
 <div class='footer'>
 	<div class="btn-group">
 	  <a href='#home'> <button type="button" class="btn btn-default">Home</button> </a>
-	  <a href='#stories'> <button type="button" class="btn btn-default">Stories</button> </a>
+	  <a href='#stories'> <button type="button" class="btn btn-default">News</button> </a>
 	  <a href='#take_action'> <button type="button" class="btn btn-default">Take Action</button> </a>
 	</div>
 </div>
