--- a/assets/app/views/take_action.html
+++ b/assets/app/views/take_action.html
@@ -3,10 +3,10 @@
 </div>
 
 <div class="row">
-  <div class="list-group menu">
-    <a href="#petitions" class="list-group-item"> Sign Petition </a>
-    <a href="#newsletter" class="list-group-item">Sign Up For Newsletter</a>
-    <a href="#" class="list-group-item">Send Letter (coming soon)</a>
+  <div class="list-group take-action">
+    <a href="#petitions" class="list-group-item"> <span class='glyphicon glyphicon-pencil'> </span> Sign Petition </a>
+    <a href="#newsletter" class="list-group-item"> <span class='glyphicon glyphicon-list-alt'> </span> Sign Up For Newsletter</a>
+    <a href="#" class="list-group-item"> <span class='glyphicon glyphicon-send'> </span> Send Letter (coming soon)</a>
   </div>
 
 </div>
@@ -14,7 +14,7 @@
 <div class='footer'>
 	<div class="btn-group">
 	  <a href='#home'> <button type="button" class="btn btn-default">Home</button> </a>
-	  <a href='#stories'> <button type="button" class="btn btn-default">Stories</button> </a>
-	  <a href='#message_center'> <button type="button" class="btn btn-default">Message Center</button> </a>
+	  <a href='#stories'> <button type="button" class="btn btn-default">News</button> </a>
+	  <a href='#message_center'> <button type="button" class="btn btn-default">Notifications</button> </a>
 	</div>
 </div>
