Added navigation to events.

--- a/assets/app/views/events.html
+++ b/assets/app/views/events.html
@@ -16,3 +16,11 @@
     </div>
   </a>
 </div>
+
+<div class='footer'>
+	<div class="btn-group">
+	  <a href='#home'> <button type="button" class="btn btn-default">Home</button> </a>
+	  <a href='#message_center'> <button type="button" class="btn btn-default">Notifications</button> </a>
+	  <a href='#take_action'> <button type="button" class="btn btn-default">Take Action</button> </a>
+	</div>
+</div>
