--- a/assets/app/styles/events.css
+++ b/assets/app/styles/events.css
@@ -31,3 +31,10 @@
 hr {
 	margin: 5px auto 5px auto;
 }
+
+.footer {
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	text-align: center;
+}
